# p7btoaiqum

./: .gitignore  Cargo.toml  README.md
src/: cert.rs  main.rs
tests/fixtures/: chain.p7b  chain_pem.p7b
