[package]
name = "p7btoaiqum"
version = "0.1.0"
edition = "2024"
description = "CLI to convert PKCS#7 (.p7b) certificates into a PEM chain compatible with NetApp Active IQ Unified Manager"

[dependencies]
cms = "0.2"
x509-cert = "0.2"
der = { version = "0.7", features = ["pem", "alloc"] }
pem = "3"
rasn = "0.28.13"
rasn-cms = "0.28.13"
rasn-pkix = "0.28.13"
